[Fix] -> Content Boxed - Layout sidebar bottom gap on mobile fixed.

--- a/assets/css/unminified/skin-1-rtl.css
+++ b/assets/css/unminified/skin-1-rtl.css
@@ -873,6 +873,7 @@ body {
   }
   .ast-separate-container #secondary {
     padding-top: 1em;
+    padding-bottom: 0;
   }
   .ast-separate-container .site-content .ast-container {
     padding: 10px;
