--- a/sass/site/layout/_layout-skin-1.scss
+++ b/sass/site/layout/_layout-skin-1.scss
@@ -129,6 +129,7 @@ body{
 		}
 		#secondary{
 			padding-top: 1em;
+			padding-bottom: 0;
 		}
 		.site-content {
 			.ast-container {
